<resources>
    <string name="app_name">SafeRoad</string>
    <string name="action_settings">Settings</string>
    <string name="background_desc">Background picture</string>

    <!-- Labels -->
    <string name="safe_road">SafeRoad</string>
    <string name="last_activity">Poslednja aktivnost</string>
    <string name="safe_to_cross">BEZBEDAN\nPRELAZ</string>
    <string name="warning">PAZNJA!\nVOZ JE U BLIZINI!</string>

    <!-- upper information -->
    <string name="address">Adresa:</string>
    <string name="city">Grad:</string>
    <string name="nearest_crossroad">Najblizi pruzni prelaz:</string>

    <!-- lower information -->
    <string name="departure_time">Vreme polaska:</string>
    <string name="train_speed">Brzina voza:</string>
    <string name="crossing_time">Trajanje prelaza:</string>
</resources>
